Adds Invisible and Transparent icons
# Adds special icons:

- **Invisible**: Do not display the icon, and do not reserve space for it in layout.
- **Transparent**: Do not display the icon, but reserve space for the element in layout. (Default icon)

The Transparent is now the default icon since common use is to have element size untouch when change icon.

Fixes #58

# Other fixes

- Fix the lack of IconSize property on avalonia design time, causing error due two constructors and taking IconAnimation as precedence.
- Fix inproper use of MaterialIconExt as control in avalonia design time

--- a/Material.Icons.Avalonia/MaterialIcon.axaml
+++ b/Material.Icons.Avalonia/MaterialIcon.axaml
@@ -47,8 +47,8 @@
           <icon:MaterialIcon Animation="Pulse"
                              Kind="DotsVertical" />
 
-          <icon:MaterialIconExt Animation="PulseCcw"
-                                IconForeground="Gold"
+          <icon:MaterialIcon Animation="PulseCcw"
+                                Foreground="Gold"
                                 Kind="ProgressHelper" />
 
           <icon:MaterialIcon Animation="FadeOutIn"
@@ -89,7 +89,7 @@
           <Border>
             <Image Width="92"
                    Source="{icon:MaterialIconExt Kind=Heart,
-                                                 IconForeground=DeepPink}"
+                   IconForeground=DeepPink}"
                    Stretch="Fill" />
           </Border>
 
@@ -101,7 +101,7 @@
 
           <ContentPresenter Content="{icon:MaterialIconExt About, FadeOutIn}" />
 
-          <ContentPresenter Content="{icon:MaterialIconExt About, 24}" />
+          <ContentPresenter Content="{icon:MaterialIconExt About, IconSize=24}" />
 
           <ContentPresenter Content="{icon:MaterialIconExt About, 24, FadeInOut}" />
 
@@ -139,6 +139,26 @@
                        Text="127.0.0.1 (with padding)" />
           </StackPanel>
         </TextBlock>
+
+        <Grid ColumnDefinitions="Auto,Auto,Auto,Auto" ColumnSpacing="5">
+          <TextBlock Grid.Column="0"
+                     VerticalAlignment="Center"
+                     Text="Transparent (Default):" />
+          <icon:MaterialIcon Grid.Column="1"
+                             BorderThickness="2"
+                             FontSize="18"
+                             BorderBrush="BlanchedAlmond" />
+
+          <TextBlock Grid.Column="2"
+                     VerticalAlignment="Center"
+                     Text="Invisible:" />
+          <icon:MaterialIcon Grid.Column="3"
+                             BorderThickness="2"
+                             BorderBrush="BlanchedAlmond"
+                             Padding="50"
+                             FontSize="512"
+                             Kind="Invisible"/>
+        </Grid>
 
         <Button FontSize="12">
           <StackPanel Orientation="Horizontal"
@@ -249,6 +269,11 @@
     <Style Selector="^.Fill /template/ Viewbox">
       <Setter Property="Width" Value="{x:Static system:Double.NaN}" />
       <Setter Property="Height" Value="{x:Static system:Double.NaN}" />
+    </Style>
+
+    <!--  Special Icons  -->
+    <Style Selector="^[Kind=Invisible]">
+      <Setter Property="IsVisible" Value="False"/>
     </Style>
 
     <!--  Animations  -->
