--- a/Material.Icons.Avalonia/MaterialIcon.axaml
+++ b/Material.Icons.Avalonia/MaterialIcon.axaml
@@ -47,8 +47,8 @@
           <icon:MaterialIcon Animation="Pulse"
                              Kind="DotsVertical" />
 
-          <icon:MaterialIconExt Animation="PulseCcw"
-                                IconForeground="Gold"
+          <icon:MaterialIcon Animation="PulseCcw"
+                                Foreground="Gold"
                                 Kind="ProgressHelper" />
 
           <icon:MaterialIcon Animation="FadeOutIn"
@@ -101,7 +101,7 @@
 
           <ContentPresenter Content="{icon:MaterialIconExt About, FadeOutIn}" />
 
-          <ContentPresenter Content="{icon:MaterialIconExt About, 24}" />
+          <ContentPresenter Content="{icon:MaterialIconExt About, IconSize=24}" />
 
           <ContentPresenter Content="{icon:MaterialIconExt About, 24, FadeInOut}" />
 
@@ -122,6 +122,16 @@
           <icon:MaterialIconText FontSize="24"
                                  Kind="Network"
                                  Text="127.0.0.1 (24px)" />
+        </StackPanel>
+
+        <StackPanel Orientation="Horizontal"
+                    Spacing="20">
+          <icon:MaterialIconText BorderBrush="Aqua" BorderThickness="1"
+                                 Text="Default icon / {x:Null}" />
+
+          <icon:MaterialIconText BorderBrush="Aqua" BorderThickness="1"
+                                 Text="Default icon / {x:Null} / Class=NullAsInvisible"
+                                 Classes="NullAsInvisible"/>
         </StackPanel>
 
 
@@ -249,6 +259,12 @@
     <Style Selector="^.Fill /template/ Viewbox">
       <Setter Property="Width" Value="{x:Static system:Double.NaN}" />
       <Setter Property="Height" Value="{x:Static system:Double.NaN}" />
+    </Style>
+    <Style Selector="^.NullAsInvisible">
+      <Setter Property="IsVisible"
+              Value="{Binding Kind,
+                          RelativeSource={RelativeSource TemplatedParent},
+                          Converter={x:Static ObjectConverters.IsNotNull}}" />
     </Style>
 
     <!--  Animations  -->
