--- a/Material.Icons.Avalonia.Demo/Views/MainWindow.axaml
+++ b/Material.Icons.Avalonia.Demo/Views/MainWindow.axaml
@@ -14,7 +14,8 @@
         d:DesignHeight="450"
         d:DesignWidth="800"
         Icon="/Assets/avalonia-logo.ico"
-        mc:Ignorable="d">
+        mc:Ignorable="d"
+        x:DataType="vm:MainWindowViewModel">
 
   <Window.Resources>
     <models:StringJoinConverter x:Key="StringJoinConverter"
